--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- font-awasome -->
+    <script src="https://kit.fontawesome.com/e3e9260ce3.js" crossorigin="anonymous"></script>
+    <!-- style -->
     <link rel="stylesheet" href="styles/style.css">
     <title>leade-board</title>
 </head>
@@ -108,7 +111,69 @@
             <div class="lates-course">
                 <h2 class="section-title">Lates Course</h2>
                 <div class="courses">
-                    
+                    <div class="course">
+                        <div class="course-bannar">
+                            <img src="images/courses/course-1.png" alt="">
+                        </div>
+                        <div >
+                            <h3 class="course-title">React - The Complete Guide 2020</h3>
+                        </div>
+                        <p  class="course-author"> <a href="">Reed Krakoff.</a> </p>
+                        <div class="course-info">
+                            <i class="fa-solid fa-star rating"></i>
+                            <i class="fa-solid fa-star rating"></i>
+                            <i class="fa-solid fa-star rating"></i>
+                            <i class="fa-solid fa-star rating"></i>
+                            <i class="fa-solid fa-star empty"></i>
+                            <p class="course-rating">4.5</p>
+                            <div class="course-duration">
+                                <i class="fa-regular fa-clock"></i>
+                                01:30 hr
+                            </div>
+                        </div>
+                    </div>
+                    <div class="course">
+                        <div class="course-bannar">
+                            <img src="images/courses/course-2.png" alt="">
+                        </div>
+                        <div >
+                            <h3 class="course-title">React - The Complete Guide 2020</h3>
+                        </div>
+                        <p  class="course-author"> <a href="">Reed Krakoff.</a> </p>
+                        <div class="course-info">
+                            <i class="fa-solid fa-star rating"></i>
+                            <i class="fa-solid fa-star rating"></i>
+                            <i class="fa-solid fa-star rating"></i>
+                            <i class="fa-solid fa-star rating"></i>
+                            <i class="fa-solid fa-star empty"></i>
+                            <p class="course-rating">4.5</p>
+                            <div class="course-duration">
+                                <i class="fa-regular fa-clock"></i>
+                                01:30 hr
+                            </div>
+                        </div>
+                    </div>
+                    <div class="course">
+                        <div class="course-bannar">
+                            <img src="images/courses/course-3.png" alt="">
+                        </div>
+                        <div >
+                            <h3 class="course-title">React - The Complete Guide 2020</h3>
+                        </div>
+                        <p  class="course-author"> <a href="">Reed Krakoff.</a> </p>
+                        <div class="course-info">
+                            <i class="fa-solid fa-star rating"></i>
+                            <i class="fa-solid fa-star rating"></i>
+                            <i class="fa-solid fa-star rating"></i>
+                            <i class="fa-solid fa-star rating"></i>
+                            <i class="fa-solid fa-star empty"></i>
+                            <p class="course-rating">4.5</p>
+                            <div class="course-duration">
+                                <i class="fa-regular fa-clock"></i>
+                                01:30 hr
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
